Link Afiliados Shopee

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -291,6 +291,21 @@
         </div>
         <a class="resource-button" href="https://monetizze.com.br/afiliados" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://shopee.com.br/m/afiliados" target="_blank">
+            <img src="../../base/images/shopee.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://shopee.com.br/m/afiliados" target="_blank">Afiliados Shopee</a>
+          </h2>
+          <p>Faça parte do programa de afiliados e receba comissões em compras validadas no nosso site</p>          
+        </div>
+        <a class="resource-button" href="https://shopee.com.br/m/afiliados" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
