--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -306,6 +306,21 @@
         </div>
         <a class="resource-button" href="https://shopee.com.br/m/afiliados" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.shareasale.com/info/" target="_blank">
+            <img src="../../base/images/shareasale.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.shareasale.com/info/" target="_blank">ShareASale Affiliates</a>
+          </h2>
+          <p>O ShareASale é similar a um mercado – eles tratam tanto com comerciantes quanto com promotores de vendas. Com mais de 3.900 vendedores, pagamentos on-time e suporte responsivo, não é de se admirar que o ShareASale está na lista de programas de afiliados mais confiáveis.</p>          
+        </div>
+        <a class="resource-button" href="https://www.shareasale.com/info/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
