[Link] Shopify Affiliates

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -321,6 +321,21 @@
         </div>
         <a class="resource-button" href="https://www.shareasale.com/info/" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://pt.shopify.com/afiliados" target="_blank">
+            <img src="../../base/images/shopify.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://pt.shopify.com/afiliados" target="_blank">Shopify Affiliates</a>
+          </h2>
+          <p>Ao convencer seus visitantes a utilizarem a plataforma deles, você será lindamente premiado pelo Shopify.</p>          
+        </div>
+        <a class="resource-button" href="https://pt.shopify.com/afiliados" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
