--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -336,6 +336,21 @@
         </div>
         <a class="resource-button" href="https://pt.shopify.com/afiliados" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://thirstyaffiliates.com/" target="_blank">
+            <img src="../../base/images/thirsty-affiliates.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://thirstyaffiliates.com/" target="_blank">Thirsty Affiliates</a>
+          </h2>
+          <p>The Best Affiliate Link Cloaking Plugin for WordPress</p>          
+        </div>
+        <a class="resource-button" href="https://thirstyaffiliates.com/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
