[link] ebay partner network

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -351,6 +351,21 @@
         </div>
         <a class="resource-button" href="https://thirstyaffiliates.com/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://partnernetwork.ebay.com/" target="_blank">
+            <img src="../../base/images/ebay-partner-network.jpg" alt="ebay partner network" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://partnernetwork.ebay.com/" target="_blank">eBay Partner Network</a>
+          </h2>
+          <p>Earn money by driving traffic and prompting sales across one of the world's largest and most diverse marketplaces.</p>          
+        </div>
+        <a class="resource-button" href="https://partnernetwork.ebay.com/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
