--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -366,6 +366,21 @@
         </div>
         <a class="resource-button" href="https://partnernetwork.ebay.com/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://rakutenadvertising.com/pt-br/afiliados/" target="_blank">
+            <img src="../../base/images/rakuten-advertising.jpg" alt="ebay partner network" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://rakutenadvertising.com/pt-br/afiliados/" target="_blank">Rakuten Advertising</a>
+          </h2>
+          <p>Rede e serviços de Marketing de afiliados</p>          
+        </div>
+        <a class="resource-button" href="https://rakutenadvertising.com/pt-br/afiliados/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
