Leadpages Partner Program

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -381,6 +381,21 @@
         </div>
         <a class="resource-button" href="https://rakutenadvertising.com/pt-br/afiliados/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://lp.leadpages.com/affiliates/" target="_blank">
+            <img src="../../base/images/leadpages.jpg" alt="ebay partner network" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://lp.leadpages.com/affiliates/" target="_blank">Leadpages Partner Program</a>
+          </h2>
+          <p>No, that’s not a typo. Join our affiliate program to earn industry-leading commissions when you promote Leadpages and drive new signups.</p>          
+        </div>
+        <a class="resource-button" href="https://lp.leadpages.com/affiliates/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
