--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -396,6 +396,21 @@
         </div>
         <a class="resource-button" href="https://lp.leadpages.com/affiliates/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.avantlink.com/" target="_blank">
+            <img src="../../base/images/avantlink.jpg" alt="ebay partner network" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.avantlink.com/" target="_blank">Avantlink</a>
+          </h2>
+          <p>Accomplished affiliate partners</p>          
+        </div>
+        <a class="resource-button" href="https://www.avantlink.com/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
