--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -411,6 +411,21 @@
         </div>
         <a class="resource-button" href="https://www.avantlink.com/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://international.clickbank.com/pt/" target="_blank">
+            <img src="../../base/images/clickbank.jpg" alt="ebay partner network" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://international.clickbank.com/pt/" target="_blank">Clickbank</a>
+          </h2>
+          <p>Mercado de afiliados</p>          
+        </div>
+        <a class="resource-button" href="https://international.clickbank.com/pt/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
