--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -426,6 +426,21 @@
         </div>
         <a class="resource-button" href="https://international.clickbank.com/pt/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.sovrn.com/commerce/?utm_source=viglink" target="_blank">
+            <img src="../../base/images/sovrn.jpg" alt="Sorvn" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.sovrn.com/commerce/?utm_source=viglink" target="_blank">Sorvn</a>
+          </h2>
+          <p>Bring the muscle to your hustle</p>          
+        </div>
+        <a class="resource-button" href="https://www.sovrn.com/commerce/?utm_source=viglink" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
