--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -441,6 +441,21 @@
         </div>
         <a class="resource-button" href="https://www.sovrn.com/commerce/?utm_source=viglink" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.cj.com/" target="_blank">
+            <img src="../../base/images/cj-affiliate.jpg" alt="Sorvn" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.cj.com/" target="_blank">CJ Affiliate</a>
+          </h2>
+          <p>Dare to Think Big</p>          
+        </div>
+        <a class="resource-button" href="https://www.cj.com/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
