--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -456,6 +456,21 @@
         </div>
         <a class="resource-button" href="https://www.cj.com/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://staging.peerfly.com/" target="_blank">
+            <img src="../../base/images/peerfly.jpg" alt="Sorvn" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://staging.peerfly.com/" target="_blank">PeerFly</a>
+          </h2>
+          <p>Sistema de afiliados</p>          
+        </div>
+        <a class="resource-button" href="https://staging.peerfly.com/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
