[Link] Sem Rush Affiliate Program

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -471,6 +471,21 @@
         </div>
         <a class="resource-button" href="https://staging.peerfly.com/" target="_blank">Veja</a>
       </li>   
+                
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.berush.com/pt" target="_blank">
+            <img src="../../base/images/semrush-affiliate-program.jpg" alt="Sorvn" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.berush.com/pt" target="_blank">SemRush Affiliate Program</a>
+          </h2>
+          <p>Receba pagamentos a cada etapa do percurso</p>          
+        </div>
+        <a class="resource-button" href="https://www.berush.com/pt" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
