--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -516,6 +516,21 @@
         </div>
         <a class="resource-button" href="https://br.hubspot.com/partners" target="_blank">Veja</a>
       </li>   
+                  
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.printful.com/br/afiliados" target="_blank">
+            <img src="../../base/images/printful.jpg" alt="Sorvn" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.printful.com/br/afiliados" target="_blank">Printful</a>
+          </h2>
+          <p>Programa de afiliados</p>          
+        </div>
+        <a class="resource-button" href="https://www.printful.com/br/afiliados" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
