Updated apoio page - section video

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1946,29 +1946,16 @@
 
 			<li>
 				<div class="resource-icon">
-					<a href="https://savemedia.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					<a href="https://getvideo.org/" target="_blank">
+						<img src="../../base/images/getvideo.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
-					<h2> <a href="https://savemedia.com/" target="_blank">SaveMedia</a> </h2>
-					<p>Baixa vídeos do Youtube, tudo direto do navegador</p>
-				</div>
-				<a class="resource-button" href="https://savemedia.com/" target="_blank">Veja</a>			
-			</li>
-
-			<li>
-				<div class="resource-icon">
-					<a href="https://getvideo.org/en" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
-					</a>
-				</div>
-				<div class="resource-details">
-					<h2> <a href="https://getvideo.org/en" target="_blank">GetVideo</a> </h2>
+					<h2> <a href="https://getvideo.org/" target="_blank">GetVideo</a> </h2>
 					<p>Baixa vídeos do Youtube, tudo direto do navegador</p>
 					<p>Para pegar direto no youtube é só apagar do www. para trás e colocar gv no lugar</p>
 				</div>
-				<a class="resource-button" href="https://getvideo.org/en" target="_blank">Veja</a>				
+				<a class="resource-button" href="https://getvideo.org/" target="_blank">Veja</a>				
 			</li>
 
 			<li>
@@ -1987,7 +1974,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/cp0/p60x60/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&ccb=3&_nc_sid=1eb0c7&_nc_ohc=UUwM_GK1e54AX_E7yBm&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=70930506a0483e3d6726a76671bca9d3&oe=604EC2B6" alt="Retro Vectors" />
+						<img src="../../base/images/makeagif.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -2001,7 +1988,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://gifs.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/gifs.com.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -2015,7 +2002,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.vyond.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/vyond.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -2029,7 +2016,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.unscreen.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/unscreen.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
