Added Simple Icons Logo

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -746,21 +746,8 @@
 
 			<li>
 				<div class="resource-icon">
-					<a href="https://gutenberg-icons.tungdu.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Gutenberg" />
-					</a>
-				</div>
-				<div class="resource-details">
-					<h2> <a href="https://gutenberg-icons.tungdu.com/" target="_blank">Gutenberg</a> </h2>
-					<p>Just another icon finder for developers building Gutenberg blocks.</p>
-				</div>
-				<a class="resource-button" href="https://gutenberg-icons.tungdu.com/" target="_blank">Veja</a>
-			</li>
-
-			<li>
-				<div class="resource-icon">
 					<a href="https://www.simpleicons.org" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Flaticon" />
+						<img src="../../base/images/simple-icons.jpg" alt="Flaticon" />
 					</a>
 				</div>
 				<div class="resource-details">
