--- a/cv/index.html
+++ b/cv/index.html
@@ -72,7 +72,7 @@
             </div>
             <p class="last">
               <i class="fas fa-envelope"></i> <span class="ml-5 contact-mail">robsonvinicius@outlook.com.br</span><br>
-              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7 contact-phone">(41) 9 8832 2873 | Claro</span>
+              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7 contact-phone">(41) 9 8832 2873</span>
             </p>
           </div>          
         </div>        
