Curso em Video - Thumbnail

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2120,7 +2120,7 @@
 			<li>
 				<a href="https://www.cursoemvideo.com" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/82531687_2666904856712152_5829601562317553664_o.png?_nc_cat=100&ccb=2&_nc_sid=1eb0c7&_nc_ohc=mPi2s27qOJ0AX_KSQor&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=1d401d2384a10e6a8072a4c1e8527f1a&oe=6014E616" alt="Cursos" />					
+						<img src="../../base/images/curso-em-video.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
