--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2074,7 +2074,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.webyurt.com/free-website-design-tools?fbclid=IwAR3_2pzqLzO8BhzlO8LZa_uqcJhymogT76vR3OmcTvFREiNILAF6G1L--uY/" target="_blank">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=G7XB5BaEz78AX_8zf9j&_nc_ht=scontent.fbfh14-1.fna&tp=7&oh=61968beffca951baf67024f6292525e9&oe=601435F2" alt="My Favorites" />
+						<img src="../../base/images/WebYurt.jpg" alt="My Favorites" />
 					</a>
 				</div>
 				<div class="resource-details">
