--- a/cv/index.html
+++ b/cv/index.html
@@ -70,9 +70,13 @@
                 <i class="fab fa-github"></i>
               </a>                                
             </div>
-            <p class="last">
+            <p class="last contact">
               <i class="fas fa-envelope"></i> <span class="ml-5 contact-mail">robsonvinicius@outlook.com.br</span><br>
-              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7 contact-phone">(41) 9 8832 2873</span>
+              <!-- <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7 contact-phone">(41) 9 8832 2873</span> -->
+              <div class="fone-number">
+                <i class="fas fa-mobile-alt ml-3"></i>
+                <span class="ml-9 contact-phone"><img src="img/fone.svg" width="130" /></span>
+              </div>
             </p>
           </div>          
         </div>        
