Update description Site Bootstrap 4

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -39,7 +39,7 @@
           <h2>
             <a href="https://robsonvinicius.github.io/site-bootstrap4/" target="_blank">Site Bootstrap 4</a>
           </h2>
-          <p>Site de venda criado com <a href="https://v4-alpha.getbootstrap.com/" target="_blank"><span style="background-color: #7F009B; padding: 3px; color: #fff;">bootstrap 4</span></a></p>
+          <p>Site do curso de Bootstrap, criado com <a href="https://v4-alpha.getbootstrap.com/" target="_blank"><span style="background-color: #7F009B; padding: 3px; color: #fff;">bootstrap 4</span></a></p>
         </div>
         <a class="resource-button" href="https://robsonvinicius.github.io/site-bootstrap4/" target="_blank">Veja</a>
       </li>  
