Updated Portfolios Page

--- a/my/paginas/portfolios/index.html
+++ b/my/paginas/portfolios/index.html
@@ -141,7 +141,7 @@
               <h2>
                 <a href="https://www.behance.net/jusantran" target="_blank">Julien Santran</a>
               </h2>
-              <p>Design gráfico, Design de impressos, Design editorial<br><a href="http://juliensantran.com/" target="_blank">wwww.juliensantran.com/r</a></p>
+              <p>Design gráfico, Design de impressos, Design editorial</p>
             </div>
             <a class="resource-button" href="https://www.behance.net/jusantran" target="_blank">Veja</a>
           </li>
