--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1344,7 +1344,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.drawkit.io/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/drawkit.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
