Glaze Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1359,7 +1359,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.glazestock.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/glaze.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
