Allienvalley Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1374,7 +1374,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alienvalley.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/allienvalley.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
