Lukaszadam Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1389,7 +1389,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://lukaszadam.com/illustrations" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/lukaszadam.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
