Humaaans Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1404,7 +1404,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://freeillustrations.xyz/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/free-illustrations.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1419,7 +1419,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.humaaans.com/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/humaaans.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
