--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -760,7 +760,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://feathericons.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Feather icons" />
+						<img src="../../base/images/feather.jpg" alt="Feather icons" />
 					</a>
 				</div>
 				<div class="resource-details">
