Devicon link and label updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -772,15 +772,15 @@
 
 			<li>
 				<div class="resource-icon">
-					<a href="http://konpa.github.io/devicon/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Feather icons" />
+					<a href="https://devicon.dev/" target="_blank">
+						<img src="../../base/images/devicon.jpg" alt="Feather icons" />
 					</a>
 				</div>
 				<div class="resource-details">
-					<h2> <a href="http://konpa.github.io/devicon/" target="_blank">Devicon 2.0</a> </h2>
+					<h2> <a href="https://devicon.dev/" target="_blank">Devicon</a> </h2>
 					<p>Icons representing programming languages, designing & development tools</p>
 				</div>
-				<a class="resource-button" href="http://konpa.github.io/devicon/" target="_blank">Veja</a>
+				<a class="resource-button" href="https://devicon.dev/" target="_blank">Veja</a>
 			</li>
 
 			<li>
