Free Nature Stock Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -851,7 +851,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://remixicon.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Icon Store" />
+						<img src="../../base/images/remix-icon.jpg" alt="Icon Store" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1085,7 +1085,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://freenaturestock.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Resource Cards" />
+						<img src="../../base/images/free-nature-stock.jpg" alt="Resource Cards" />
 					</a>
 				</div>
 				<div class="resource-details">
