Raw Pixel Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1098,7 +1098,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.rawpixel.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Resource Cards" />
+						<img src="../../base/images/rawpixel.jpg" alt="Resource Cards" />
 					</a>
 				</div>
 				<div class="resource-details">
