Hi-Clipart Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1111,7 +1111,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.hiclipart.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="#" />
+						<img src="../../base/images/hi-clipart.jpg" alt="#" />
 					</a>
 				</div>
 				<div class="resource-details">
