--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1517,7 +1517,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://mega.nz/#F!uZZ12I7Z!g9TtOZrFAy5pZ_z6Mzlt1Q" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/mega.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
