--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1543,7 +1543,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.realthread.com/templates" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/real-thread.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
