--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1439,7 +1439,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://socialsizes.io/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/social-sizes.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
