Freebiesbug Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1556,7 +1556,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://freebiesbug.com/psd-freebies/mockups/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/freebiesbug.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
