Free Mockup Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1595,7 +1595,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.free-mockup.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/free-mockup.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
