Mockup World Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1608,7 +1608,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.mockupworld.co/?fbclid=IwAR0t2BByERjMDIBzAH3iEMN3fd5GfEs0sJplOGhqDzyqTVTS-XHoYUTsGUA" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+						<img src="../../base/images/mockup-world.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
