Learncafe Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2133,7 +2133,7 @@
 			<li>
 				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&ccb=2&_nc_sid=1eb0c7&_nc_ohc=OzuiMMQGYwEAX860eSj&_nc_ht=scontent.fbfh14-1.fna&oh=d025ad3077fd9cc1326b558ad6ffb49c&oe=60167CED" alt="Cursos" />					
+						<img src="../../base/images/learncafe.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
