Dio Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2146,7 +2146,7 @@
 			<li>
 				<a href="https://digitalinnovation.one/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/51768489_2216868438642807_3460762326448209920_n.png?_nc_cat=103&ccb=2&_nc_sid=1eb0c7&_nc_ohc=qbU-4bZhi-QAX_hkuOP&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=b2c8a8d3be9c2a63801916ea59ebd34e&oe=60147474" alt="Cursos" />					
+						<img src="../../base/images/dio.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
