Bitdegree Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2159,7 +2159,7 @@
 			<li>
 				<a href="https://bitdegree.org" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/62500920_425639414686982_6571372294424231936_o.jpg?_nc_cat=110&ccb=2&_nc_sid=1eb0c7&_nc_ohc=BhGjcmNSacIAX-FWPFN&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=e4ff137567c1edc5fbcb8d551c2ba267&oe=60163A2C" alt="Cursos" />					
+						<img src="../../base/images/bitdegree.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
