Treinaweb Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2172,7 +2172,7 @@
 			<li>
 				<a href="https://www.treinaweb.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/26047497_10155203472287405_6195080552181580604_n.png?_nc_cat=104&ccb=2&_nc_sid=1eb0c7&_nc_ohc=Jjy__--hfpQAX__DEym&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=243d7fe43f8422d8962b22b7a925cc47&oe=6014C4AA" alt="Cursos" />					
+						<img src="../../base/images/treinaweb.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
