--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2198,7 +2198,7 @@
 			<li>
 				<a href="https://www.ev.org.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/59713581_309923663241308_8110430501610717184_o.jpg?_nc_cat=108&ccb=2&_nc_sid=1eb0c7&_nc_ohc=BOSzuup8lp8AX9hIIpk&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=6387c2aaf67d761a980f33cd746ba502&oe=6014CA7D" alt="Cursos" />					
+						<img src="../../base/images/fundacao-bradesco.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
