Sebrae Cursos Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2211,7 +2211,7 @@
 			<li>
 				<a href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/15823063_658816224289753_6675418139788142672_n.jpg?_nc_cat=111&ccb=2&_nc_sid=1eb0c7&_nc_ohc=iPdyYYBF4sQAX-C3bZ8&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=fcecc348bffb4ddb95cae54c479650aa&oe=601600FA" alt="Cursos" />					
+						<img src="../../base/images/sebrae.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
