--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2224,7 +2224,7 @@
 			<li>
 				<a href="https://academy.moz.com/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p148x148/51186847_10155830425386246_4646450432908984320_n.jpg?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=Fsh-py0VN2sAX83m9lh&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=10bcab5435502c794f53c1c9ecc8eb82&oe=6016FB14" alt="Cursos" />					
+						<img src="../../base/images/moz-academy.jpg" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
