Shortcuts Design Label Updated

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2244,7 +2244,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://shortcuts.design/" target="_blank">
-						<img src="https://shortcuts.design/logo@2x.png" alt="My Favorites" />
+						<img src="../../base/images/shortcuts.jpg" alt="My Favorites" />
 					</a>
 				</div>
 				<div class="resource-details">
