Adobe Blog Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -248,7 +248,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://theblog.adobe.com/" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/101051048_2998825346838815_1214873912475648000_o.png?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=yTlVzfJLhoQAX_AwiBQ&_nc_oc=AQlk5oTXyqdPqlCXk1EmKLHyS1OiR_C_BNVnaUjqo5eJAnEni9OeB2RGQahbUBDBM3PdhjE5o7PbmXktIS_0MX1w&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=d87373c5055f85e5469ffe5f8a0214ae&oe=601609D7" alt="#" />
+            <img src="../../base/images/adobe-blog.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
