--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -278,7 +278,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://thedesignest.net/" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p148x148/44573215_322573931896568_4979551852820430848_o.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=D1CjBfuBTMkAX9jeTt2&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=98fc5673475e5c21c3d668117f0c529f&oe=601701A2" alt="#" />
+            <img src="../../base/images/the-designest.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
