Paper Sizes Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -298,7 +298,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://www.papersizes.io" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/dimensoes-papeis.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
