Rubens Mendes Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -373,7 +373,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://media.giphy.com/media/26BRy7xHvpNAEam52/giphy.gif" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/rubens-mendes.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
