--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -388,7 +388,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.pantone.com/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/pantone.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
