--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -403,7 +403,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.monkeybusiness.com.br/blog/11-documentarios-sobre-design" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/monkey-business.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
