Avctoris Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -418,7 +418,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://avctoris.com" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/avctoris.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
