Identity Designed Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -449,7 +449,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://identitydesigned.com/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/id.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
