--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -464,7 +464,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/column-five.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
