Glossário Design Gráfico Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -483,7 +483,7 @@
       <li>
         <div class="resource-icon">
           <a href="glossario-design-grafico.html">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/glossario.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
