99 design Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -498,7 +498,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://99designs.com.br/blog/trends/graphic-design-trends-2018/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/99design.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
