The complete guide to social media image sizes for 2023

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -512,6 +512,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://99designs.com.br/blog/marketing-advertising/social-media-image-sizes/" target="_blank">
+            <img src="../../base/images/99design.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://99designs.com.br/blog/marketing-advertising/social-media-image-sizes/" target="_blank">The complete guide to social media image sizes for 2023</a>
+          </h2>
+          <p>99 Designs</p>
+        </div>
+        <a class="resource-button" href="https://99designs.com.br/blog/marketing-advertising/social-media-image-sizes/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://designcomcafe.com.br/manuais-de-identidade-visual-para-se-inspirar/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
