Design com Café Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -528,7 +528,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designcomcafe.com.br/manuais-de-identidade-visual-para-se-inspirar/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/design-com-cafe.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
