Logo Design Love Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -543,7 +543,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.logodesignlove.com/brand-identity-style-guides" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/logo-design-love.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
