--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -573,7 +573,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://tutano.trampos.co/12187-formato-imagem-usar-jpg-gif-png/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/tutano-trampos.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
