--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -635,7 +635,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://temporalcerebral.com.br/fontes-manuscritas-aumentam-vendas-produtos-hedonicos/?fbclid=IwAR0q7z28beFcJwOFIt3ljNaTCcfBRfedFKQMLl1O9tcCDhFPM7TkFba04hU" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/temporal-cerebral.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
