Muzli - Olha Bahaieva - Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -651,7 +651,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/olha-bahaieva-muzli-design-inspiration.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -659,7 +659,7 @@
             <a href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank"> 
               Why Designer and Developer Can`t be the Same Person?</a>
           </h2>
-          <p>Much - Olha Bahaieva</p>
+          <p>Muzli - Olha Bahaieva</p>
         </div>
         <a class="resource-button" href="https://medium.muz.li/why-designer-and-developer-can-t-be-the-same-person-98243432a9a3" target="_blank" id="professores">Veja</a>       
       </li>
