Adriane Linhares professora UTP - Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -671,7 +671,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p240x240/14907158_10154679236012486_6361851245264864182_n.jpg?_nc_cat=102&_nc_ohc=i7dizP35AaAAX9cCHR_&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=1&oh=5c5516efdb76fb2921e1ff66aacfc771&oe=5EAC002E" alt="#" />
+            <img src="../../base/images/adriane-linhares.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
