--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -686,7 +686,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/c3.3.314.314a/s240x240/11846626_10205576124976275_4785003177905832124_n.jpg?_nc_cat=102&_nc_ohc=yqFGpKs5l3QAX9kppLR&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=1&oh=902f73bf433dc538b9a3849507088905&oe=5EAA1B8E" alt="#" />
+            <img src="../../base/images/anelise-gerceski.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
