Claudio Silva professor UP - Link Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -710,7 +710,7 @@
           </h2>
           <p><mark><a href="http://lattes.cnpq.br/1301449543531009" target="_blank">Currículo Lattes</a></mark> | <mark> <a href="http://claudiosilva3d.blogspot.com/" target="_blank">Blogspot</a></mark> | <mark><a href="https://claudiosilva3d.carbonmade.com/" target="_blank">Carbonmade</a></mark></p>
         </div>
-        <a class="resource-button" href="https://www.facebook.com/claudio.silva.92560" target="_blank">Veja</a>
+        <a class="resource-button" href="https://www.facebook.com/Tiendz1176192243" target="_blank">Veja</a>
       </li>
 
       <li>
