Claudio, Helcio, Michael - Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -701,7 +701,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.facebook.com/claudio.silva.92560" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/13615121_10209696452506185_5182370009320878253_n.jpg?_nc_cat=110&_nc_ohc=YXyeESk7tJAAQn4Nay3p9q_0mpN-Q1bbVV28TyHzUcb54kt2ZRRMaPp4g&_nc_ht=scontent.fcwb1-1.fna&oh=18e31a7092a66f863d488f948145b170&oe=5EA8B5F1" alt="#" />
+            <img src="../../base/images/claudio-silva.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -792,7 +792,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/3174491883976462" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/69609704_10221319672680745_4089498805043462144_n.jpg?_nc_cat=104&_nc_ohc=pbvCar-FVi8AQmoZuRHe5eX_zCv2UvbNlIkOgEoTcx43JFsiGT8aLseeQ&_nc_ht=scontent.fcwb1-1.fna&oh=49d2ce6a9a45a5f65ca3472804173dd7&oe=5EAB4C4D" alt="#" />
+            <img src="../../base/images/helcio.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -807,7 +807,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://lattes.cnpq.br/4024228122241936" target="_blank">
-            <img src="https://www.facebook.com/search/async/profile_picture/?fbid=100000256500555&width=72&height=72" alt="#" />
+            <img src="../../base/images/michael.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
