Renato Ferrarini - Label udpated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -852,7 +852,7 @@
       <li>
         <div class="resource-icon">
           <a href=" http://lattes.cnpq.br/4894432754322418" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p240x240/28168551_10209450554734355_5066591605130582357_n.jpg?_nc_cat=110&_nc_ohc=TXQMMD-PNWkAQktARIXZj1OeA9FevhKAq3XnIN849d_NhMdn7R2BKmnfA&_nc_ht=scontent.fcwb1-1.fna&oh=6593fc5bd895e210fc4fb55e795b8b5a&oe=5E9E127D" alt="#" />
+            <img src="../../base/images/renato.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
