Guia com Marketing - Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -901,7 +901,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.guiacommarketing.com.br/blog/15-ferramentas-de-design-grafico-on-line/" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/47350876_564042494042399_6915279564289605632_n.jpg?_nc_cat=104&_nc_ohc=IyO_untDA-AAQkJe_u3VzbOTs3HFuNqJO8BwKsnZVkuY7S0GHkILe_7YQ&_nc_ht=scontent.fbfh14-2.fna&oh=4194c8f2fac8cb9670c0a7b2e49dfd1b&oe=5E67C09D" alt="#" />
+            <img src="../../base/images/md.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
