Creative do, Hongkiat label updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -916,7 +916,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://creativedo.co/FontAwesomePS" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/creative-do.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -931,7 +931,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.hongkiat.com/blog/online-offline-tools-to-compress-videos/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/hongkiat.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
